--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>TIIDELab-Catalog</title>
 </head>
 <body>
-    <div></div>
+    <div>
+        <h2>Welcome to Our Catalogue systems</h2>
+    </div>
 </body>
 </html>
