--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <div>
         <h2>Welcome to Our Catalogue systems</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Inventore accusantium suscipit at quod dicta illo quisquam 
+            quis consequatur temporibus aperiam? 
+            Magni dolor eius soluta reprehenderit 
+            temporibus aliquam magnam itaque voluptate.
+        </p>
     </div>
 </body>
 </html>
